--- a/html /index.html
+++ b/html /index.html
@@ -3,50 +3,54 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> Main Page </title>
+    <title>Main Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/a1dfd8ade4.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
 </head>
 <body>
-   <header> 
+    <header>
         <div class="navbar">
-        <!-- Take it back to the main Page if they hit the logo-->
-        <div class="logo"> <a href="#"> MEDICOST </a></div>
-        <ul class="links">
-            <li><a href="#"> Cost Estimator</a></li>
-            <li><a href="#"> Compare Prices</a></li>
-            <li><a href="#"> Find Locations</a></li>
-            <li><a href="#"> FAQ </a></li>
-        </ul>
+            <!-- Take it back to the main Page if they hit the logo-->
+            <div class="logo"><a href="#">MEDICOST</a></div>
+            <ul class="links">
+                <li><a href="#">Cost Estimator</a></li>
+                <li><a href="#">Compare Prices</a></li>
+                <li><a href="#">Find Locations</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+            <a href="#" class="action_btn">Sign In</a>
 
-        <a href="#" class="action_btn"> Get Started </a>
-            <div class="toggle_button"> 
-                <i class="fa-solid fa-bars" style="color: #000000;"></i>
         </div>
-   </header>
-   <nav class = "sidebar">
-    <a href="#page1" class="sidebar-button active" id="page1-button"></a>
-    <a href="#page2" class="sidebar-button active" id="page2-button"></a>
-    <a href="#page3" class="sidebar-button active" id="page3-button"></a>
-    <a href="#page4" class="sidebar-button active" id="page4-button"></a>
-  </nav>
+    </header>
 
-   <main>
-    <section class="page1">
-        <h1>ONE</h1>
-    </section>
-    <section class="page2">
-        <h1>TWO</h1>
-    </section>
-    <section class="page3">
-        <h1>THREE</h1>
-    </section>
-    <section class="page4">
-        <h1>FOUR</h1>
-    </section>
-</main>
+    <nav class="sidebar">
+        <a href="#page1" class="sidebar-button" id="page1-button"></a>
+        <a href="#page2" class="sidebar-button" id="page2-button"></a>
+        <a href="#page3" class="sidebar-button" id="page3-button"></a>
+        <a href="#page4" class="sidebar-button" id="page4-button"></a>
+    </nav>
 
-<script src='/js/app.js'></script>
+    <main>
+        <section class="page1">
+            <h1>Your Health, Your Wealth</h1>
+            <div class = "onedes">
+                <p>In a world where healthcare costs are no longer a puzzle, MEDICOST makes it a reality. Empower yourself with our user-friendly app, providing transparent info to take control of expenses. Plan ahead, know procedure costs, find affordable locations near you. Join us in revolutionizing healthcare cost transparency with MEDICOST, where health and wealth intertwine.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            
+        </section>
+        <section class="page2">
+            <h1>TWO</h1>
+        </section>
+        <section class="page3">
+            <h1>THREE</h1>
+        </section>
+        <section class="page4">
+            <h1>FOUR</h1>
+        </section>
+    </main>
+
+    <script src='/js/app.js'></script>
 </body>
 </html>
