--- a/html /index.html
+++ b/html /index.html
@@ -33,22 +33,39 @@
 
     <main>
         <section class="page1">
+            <!-- Maybe mention the # on how much Americans lose or get charged with health care ....-->
             <h1>Your Health, Your Wealth</h1>
-            <div class = "onedes">
+            <div class="onedes">
                 <p>In a world where healthcare costs are no longer a puzzle, MEDICOST makes it a reality. Empower yourself with our user-friendly app, providing transparent info to take control of expenses. Plan ahead, know procedure costs, find affordable locations near you. Join us in revolutionizing healthcare cost transparency with MEDICOST, where health and wealth intertwine.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="#page2" class="btn" id = "learnmore">Learn More</a>
             </div>
             
         </section>
+
         <section class="page2">
-            <h1>TWO</h1>
+            <h1>What do we do ? </h1>
+            <div class = "twodes">
+                <p> At MEDICOST, we are dedicated to revolutionizing healthcare cost transparency. Our application provides you with the following features: </p>
+                
+                    <li>Transparent Cost Information: Easily search and access comprehensive cost ranges and averages for various medical procedures based on procedure type and zip code.🔎</li>
+                    <li>Affordable Location Recommendations: Discover the most affordable healthcare service providers and facilities near your location, ensuring you receive quality care at the best possible prices.🗺</li>
+                    <li>Personalized Cost Planning: Plan ahead and estimate your healthcare expenses by accessing cost breakdowns, identifying potential savings, and understanding the financial implications of different procedures.💵</li>
+                    <li>User-Friendly Interface: Our intuitive and user-friendly interface makes it easy for you to navigate through the application, access the information you need, and make well-informed decisions about your healthcare.😊</li>
+
+                <p> Click / Scroll below to look at our Services. </p>
+                <a href="#page3" class="btn2" id ="serve"> Services </a>
+        </div>
         </section>
+
         <section class="page3">
-            <h1>THREE</h1>
+            <h1>Services</h1>
         </section>
+
         <section class="page4">
-            <h1>FOUR</h1>
+            <h1>Ready to get started ?</h1>
         </section>
+
+
     </main>
 
     <script src='/js/app.js'></script>
