--- a/html /index.html
+++ b/html /index.html
@@ -47,10 +47,10 @@
             <div class = "twodes">
                 <p> At MEDICOST, we are dedicated to revolutionizing healthcare cost transparency. Our application provides you with the following features: </p>
                 
-                    <li>Transparent Cost Information: Easily search and access comprehensive cost ranges and averages for various medical procedures based on procedure type and zip code.🔎</li>
-                    <li>Affordable Location Recommendations: Discover the most affordable healthcare service providers and facilities near your location, ensuring you receive quality care at the best possible prices.🗺</li>
-                    <li>Personalized Cost Planning: Plan ahead and estimate your healthcare expenses by accessing cost breakdowns, identifying potential savings, and understanding the financial implications of different procedures.💵</li>
-                    <li>User-Friendly Interface: Our intuitive and user-friendly interface makes it easy for you to navigate through the application, access the information you need, and make well-informed decisions about your healthcare.😊</li>
+                    <li>Transparent Cost Information: Easily search and access comprehensive cost ranges and averages for various medical procedures based on procedure type and zip code. 🔎</li>
+                    <li>Affordable Location Recommendations: Discover the most affordable healthcare service providers and facilities near your location, ensuring you receive quality care at the best possible prices. 📍</li>
+                    <li>Personalized Cost Planning: Plan ahead and estimate your healthcare expenses by accessing cost breakdowns, identifying potential savings, and understanding the financial implications of different procedures. 💵</li>
+                    <li>User-Friendly Interface: Our intuitive and user-friendly interface makes it easy for you to navigate through the application, access the information you need, and make well-informed decisions about your healthcare. 😊</li>
 
                 <p> Click / Scroll below to look at our Services. </p>
                 <a href="#page3" class="btn2" id ="serve"> Services </a>
@@ -59,6 +59,27 @@
 
         <section class="page3">
             <h1>Services</h1>
+            <div class = "service-boxes">
+
+            <div class = "box1">
+                <h2> COST ESTIMATOR </h2>
+                <h3><i class="fa-solid fa-money-bill" style="color: #ffffff;font-size: 2.5rem;"></i></h3>
+                <p> Our Cost Estimator feature allows you to easily access comprehensive cost ranges and averages for various medical procedures based on procedure type and location. You can plan ahead and estimate your healthcare expenses, making informed decisions about your medical treatments.</p>
+            </div>
+            <div class = "box2"> 
+                <h2> PRICE COMPARE</h2>
+                <h3><i class="fa-sharp fa-solid fa-scale-unbalanced-flip" style="color: #ffffff;font-size: 2.5rem;"></i></h3>
+                <p> With our Price Comparison tool, you can compare prices for medical services offered by different healthcare providers. This feature helps you find the most affordable options while ensuring quality care, allowing you to make cost-effective choices for your healthcare needs.</p>
+            </div>
+            <div class = "box3"> 
+                <h2> LOCATIONS</h2>
+                    <div class = "box3logo">
+                        <h3><i class="fa-regular fa-map-location-dot" style="color: #ffffff;font-size:2.5rem"></i></h3>
+                    </div>
+                <p>The Location feature helps you discover healthcare service providers and facilities near your location. You can find affordable and convenient options for medical treatments, ensuring that you receive quality care without having to travel far.</p>
+            </div>
+            <!-- Maybe add a fourth box about MY LISt idk -->
+        </div>
         </section>
 
         <section class="page4">
