--- a/html /index.html
+++ b/html /index.html
@@ -84,6 +84,8 @@
 
         <section class="page4">
             <h1>Ready to get started ?</h1>
+            <p>Sign-up with the link below: </p>
+            <a href="#" class ="btn3" id = "signup"> Sign up</a>
         </section>
 
 
