added the signup feature
added a sign up feature now working on the other tabs

--- a/html /signin.html
+++ b/html /signin.html
@@ -50,6 +50,14 @@
 
                     </div>
                 </div>
+                <div class="signup">
+                    <span> Don't ? Sign up </span>
+                    
+                    <div class="signup">
+                        <input type="submit" class = "submit" value ="Sign up">
+
+                    </div>
+                </div>
             </div>
         </div>
     </header>
